<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ru.aston.sarancha_lesson2.CustomView
        android:id="@+id/officeFirst"
        android:layout_width="0dp"
        android:layout_height="@dimen/vacancyHeight"
        android:layout_marginStart="@dimen/marginMedium"
        android:layout_marginTop="@dimen/marginMedium"
        android:layout_marginEnd="@dimen/marginMedium"
        app:bodyText="@string/cvOfficeFirstBody"
        app:headerText="@string/cvOfficeFirstHeader"
        app:imageSrc="@drawable/office_building_64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ru.aston.sarancha_lesson2.CustomView
        android:id="@+id/officeSecond"
        android:layout_width="0dp"
        android:layout_height="@dimen/vacancyHeight"
        android:layout_marginStart="@dimen/marginMedium"
        android:layout_marginEnd="@dimen/marginMedium"
        app:bodyText="@string/cvOfficeSecondBody"
        app:headerText="@string/cvOfficeSecondHeader"
        app:imageSrc="@drawable/office_building_64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/officeFirst" />

    <ru.aston.sarancha_lesson2.CustomView
        android:id="@+id/officeThird"
        android:layout_width="0dp"
        android:layout_height="@dimen/vacancyHeight"
        android:layout_marginStart="@dimen/marginMedium"
        android:layout_marginEnd="@dimen/marginMedium"
        app:bodyText="@string/cvOfficeThirdBody"
        app:headerText="@string/cvOfficeThirdHeader"
        app:imageSrc="@drawable/office_building_64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/officeSecond" />

</androidx.constraintlayout.widget.ConstraintLayout>