<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginMedium"
        android:layout_marginTop="@dimen/marginLarge"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" />

    <TextView
        android:id="@+id/tvLogoHeader"
        style="@style/TitleTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginMedium"
        android:layout_marginTop="@dimen/marginLarge"
        android:contentDescription="@string/contentDescription"
        android:text="@string/tvLogoHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLogoText"
        style="@style/SmallTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginMedium"
        android:contentDescription="@string/contentDescription"
        android:text="@string/tvLogoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@id/tvLogoHeader" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="ivLogo, tvLogoText" />

    <TextView
        android:id="@+id/tvAboutHeader"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginLarge"
        android:layout_marginTop="@dimen/marginMedium"
        android:contentDescription="@string/contentDescription"
        android:text="@string/tvAboutHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <TextView
        android:id="@+id/tvAbout"
        style="@style/MediumTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginMedium"
        android:layout_marginEnd="@dimen/marginLarge"
        android:contentDescription="@string/contentDescription"
        android:text="@string/tvAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAboutHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>